# ansible-role-packer_provision

./: .ansible-lint  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.yml  tasks.yml
defaults/: main.yml
meta/: main.yml
molecule/: default
molecule/default/: molecule.yml  prepare.yml
molecule/kvm/: molecule.yml  prepare.yml
molecule/qemu/: molecule.yml
molecule/resources/playbooks/: converge.yml  prepare.yml  vars.yml  verify.yml
molecule/resources/tests/: test_default.py
molecule/shared/: playbook.yml  prepare.yml  yamllint.yml
molecule/virtualbox/: molecule.yml
tasks/: apt.yml  clean.yml  dnf.yml  main.yml  swap.yml  user.yml  vagrant.yml  virtualbox.yml
vars/: Alpine.yml  Archlinux.yml  Debian.yml  Fedora.yml  RedHat-8.yml  RedHat.yml  Suse.yml  Ubuntu-16.yml  Ubuntu-18.yml  alpine.yml  archlinux.yml  debian.yml  main.yml  redhat.yml  suse.yml  ubuntu.yml
