[project]
name = "ansible-role-packer-provision"
version = "0.0.0"
description = "Ansible role for setting up packer-provision."
authors = ["Jonas Mauer"]
license = "MIT"
keywords = []

repository = "https://github.com/jomrr/ansible-role-packer-provision"

[tool.commitizen]
name = "cz_conventional_commits"

[tool.semantic_release]
commit_message = "build(release): version {version}"
major_on_zero = true
upload_to_pypi = false
upload_to_vcs_release = true
version_toml = [
    "pyproject.toml:project.version",
]
